# codearena-rl-benchmark

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  env.py  executor.py  grader.py  models.py
tasks/: __init__.py  easy.json  easy.py  hard.json  hard.py  medium.json  medium.py
