[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codearena-rl-benchmark"
version = "1.0.0"
description = "RL Benchmark for Autonomous Code Repair — an OpenEnv-compatible environment"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Aditya Santosh Naik" }
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["server*", "tasks*"]
